# ChatBot

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: ci-cmake-build.yml
src/: chatbot.cpp  chatbot.h  chatgui.h  chatlogic.cpp  graphnode.cpp  graphnode.h
